# consolekit

./: .bumpversion.cfg  .deepsource.toml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  spinner_demo.py  tox.ini
.ci/: actions_deploy_conda.sh  travis_deploy_conda.sh
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
consolekit/: __init__.py  __init__.pyi  _readline.py  _types.py  commands.py  input.py  options.py  terminal_colours.py  terminal_colours.pyi  testing.py  tracebacks.py  utils.py  versions.py
doc-source/: Source.rst  conf.py  contributing.rst  docs_needspace.py  index.rst  latex_transition.py  license.rst  requirements.txt
doc-source/api/: commands.rst  consolekit.rst  input.rst  options.rst  terminal_colours.rst  testing.rst  tracebacks.rst  utils.rst  versions.rst
tests/: conftest.py  requirements.txt  test_commands.py  test_input.py  test_options.py  test_terminal_colours.py  test_terminal_colours_colorama.py  test_testing.py  test_tracebacks.py  test_type_hints_init.yaml  test_utils.py  test_versions.py
tests/import_commands_demo/: __init__.py  submodule.py
tests/test_commands_/: test_context_inheriting_group.md  test_context_inheriting_group_foo.md  test_context_inheriting_group_search.md  test_markdown_help_command.md  test_markdown_help_command.txt  test_markdown_help_command_no_colour.md  test_markdown_help_command_no_colour.txt  test_markdown_help_command_no_help.md  test_markdown_help_command_ordered_list.md  test_markdown_help_command_ordered_list.txt  test_markdown_help_command_pycharm.md  test_markdown_help_command_pycharm.txt  test_markdown_help_group_command.md  test_markdown_help_group_command_no_colour.md  test_markdown_help_group_group.md  test_markdown_help_group_no_args_is_help.md  test_markdown_help_no_args_is_help.md  test_raw_help_command.md  test_raw_help_group_command.md  test_raw_help_group_group.md  test_suggestion_group_84__success.md  test_suggestion_group_caps.md  test_suggestion_group_failure.md  test_suggestion_group_pre_84__success.md
tests/test_diff_/: modified  original
tests/test_input_/: test_choice_letters.txt  test_choice_letters.yml  test_choice_numbers.txt  test_choice_numbers.yml  test_choice_numbers_8_.yml  test_confirm.txt  test_confirm.yml  test_prompt.txt  test_prompt.yml  test_prompt_err.yml
tests/test_options_/: test_auto_default_option.md  test_choice_option_7_.txt  test_choice_option_8_.txt  test_colour_option.txt  test_described_argument.md  test_force_option.txt  test_lazy_choice_7_.txt  test_lazy_choice_8_.txt  test_no_pager_option.txt  test_prompt_option_7_.txt  test_prompt_option_8_.txt  test_prompt_option_8_2_.txt  test_prompt_option_flag_8_.txt  test_verbose_option.txt
tests/test_terminal_colours_/: test_print_256_colour_testpattern.txt
tests/test_tracebacks_/: test_handle_tracebacks_TracebackHandler_SystemExit_2_Exception_.txt  test_handle_tracebacks_TracebackHandler_SystemExit_2_FileExistsError_.txt  test_handle_tracebacks_TracebackHandler_SystemExit_2_FileNotFoundError_.txt  test_handle_tracebacks_TracebackHandler_SystemExit_2_ValueError_.txt  test_handle_tracebacks_TracebackHandler_SystemExit_NameError_.txt  test_handle_tracebacks_TracebackHandler_SystemExit_SyntaxError_.txt  test_handle_tracebacks_TracebackHandler_SystemExit_TypeError_.txt  test_handle_tracebacks_handle_tracebacks_TypeError_.txt  test_handle_tracebacks_ignored_click_7_handle_tracebacks_click_UsageError_.txt  test_handle_tracebacks_ignored_click_8_TracebackHandler_SystemExit_2_click_BadParameter_.txt  test_handle_tracebacks_ignored_click_8_TracebackHandler_SystemExit_2_click_FileError_8_.txt  test_handle_tracebacks_ignored_click_8_TracebackHandler_SystemExit_click_UsageError_.txt  test_handle_tracebacks_ignored_click_8_traceback_handler_click_ClickException_.txt  test_handle_tracebacks_ignored_click_TracebackHandler_click_FileError_.txt  test_handle_tracebacks_ignored_click_traceback_handler_click_BadParameter_.txt  test_traceback_option.txt
tests/test_utils_/: test_coloured_diff.txt  test_echo.yml  test_hidden_cursor.yml
