[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "consolekit"
version = "1.1.0"
description = "Additional utilities for click."
readme = "README.rst"
keywords = [ "click", "terminal",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/consolekit"
"Issue Tracker" = "https://github.com/domdfcoding/consolekit/issues"
"Source Code" = "https://github.com/domdfcoding/consolekit"
Documentation = "https://consolekit.readthedocs.io/en/latest"
